--- a/views/contacts/1-contact.html
+++ b/views/contacts/1-contact.html
@@ -376,7 +376,7 @@
     ></script>
     <!-- Buscador de Contacto -->
     <script src="../../js/search-contact.js"></script>
-    <!-- Validación de formulario -->
-    <script src="../../js/contact-form-validation.js"></script>
+    <!-- Validación de formulario - Agregar contacto -->
+    <script src="../../js/form-validation-contact.js"></script>
   </body>
 </html>
