--- a/assets/css/_component_form.css
+++ b/assets/css/_component_form.css
@@ -14,6 +14,12 @@
   background-color: var(--white);
 }
 
+.form-check-input:focus[type="radio"] {
+  box-shadow: inset 0 0 0 3px var(--white);
+  background-color: var(--btn-primary-color);
+  border-color: var(--btn-primary-color);
+}
+
 .form-check-input:checked[type="radio"] {
   --bs-form-check-bg-image: none;
 }
