--- a/views/contacts/2-contact-added.html
+++ b/views/contacts/2-contact-added.html
@@ -246,7 +246,7 @@
                   <tbody>
                     <tr>
                       <td>
-                        <span class="ellipsis-2">Andrés Iniesta</span>
+                        <span class="table-alias">Andrés Iniesta</span>
                       </td>
                       <td>
                         <span>No transcribir</span>
