--- a/views/contacts/3-contact-edit.html
+++ b/views/contacts/3-contact-edit.html
@@ -247,7 +247,7 @@
                   <tbody>
                     <tr>
                       <td>
-                        <span class="ellipsis-2">Andrés Iniesta</span>
+                        <span class="table-alias">Andrés Iniesta</span>
                       </td>
                       <td>
                         <span>No transcribir</span>
@@ -285,7 +285,7 @@
                     </tr>
                     <tr>
                       <td>
-                        <span class="ellipsis-2">Adam Sandler</span>
+                        <span class="table-alias">Adam Sandler</span>
                       </td>
                       <td>
                         <span>No transcribir</span>
@@ -325,7 +325,7 @@
                     </tr>
                     <tr>
                       <td>
-                        <span class="ellipsis-2">Adele</span>
+                        <span class="table-alias">Adele</span>
                       </td>
                       <td>
                         <span>Transcribir en mi chat privado</span>
@@ -365,7 +365,7 @@
                     </tr>
                     <tr>
                       <td>
-                        <span class="ellipsis-2">Alicia Keys</span>
+                        <span class="table-alias">Alicia Keys</span>
                       </td>
                       <td>
                         <span>No transcribir</span>
@@ -405,7 +405,7 @@
                     </tr>
                     <tr>
                       <td>
-                        <span class="ellipsis-2"
+                        <span class="table-alias"
                           >Arnold Kevin Schwarzenegger Chamberlain</span
                         >
                       </td>
