--- a/views/contacts/4-contact-delete.html
+++ b/views/contacts/4-contact-delete.html
@@ -178,7 +178,7 @@
                 <tbody>
                   <tr>
                     <td>
-                      <span class="ellipsis-2">Andrés Iniesta</span>
+                      <span class="table-alias">Andrés Iniesta</span>
                     </td>
                     <td>
                       <span>No transcribir</span>
@@ -201,7 +201,7 @@
                   </tr>
                   <tr>
                     <td>
-                      <span class="ellipsis-2">Adam Sandler</span>
+                      <span class="table-alias">Adam Sandler</span>
                     </td>
                     <td>
                       <span>No transcribir</span>
@@ -224,7 +224,7 @@
                   </tr>
                   <tr>
                     <td>
-                      <span class="ellipsis-2">Adele</span>
+                      <span class="table-alias">Adele</span>
                     </td>
                     <td>
                       <span>Transcribir en mi chat privado</span>
@@ -247,7 +247,7 @@
                   </tr>
                   <tr>
                     <td>
-                      <span class="ellipsis-2">Alicia Keys</span>
+                      <span class="table-alias">Alicia Keys</span>
                     </td>
                     <td>
                       <span>No transcribir</span>
@@ -269,8 +269,8 @@
                     </td>
                   </tr>
                   <tr>
-                    <td>
-                      <span class="ellipsis-2">Arnold Kevin Schwarzenegger Chamberlain</span>
+                     <td>
+                      <span class="table-alias">Arnold Kevin Schwarzenegger Chamberlain</span>
                     </td>
                     <td>
                       <span>No transcribir</span>
